# investing

./: .gitignore  ANALYSIS.md  LICENSE  QUICK_START.md  README.md  README_ALPHA_VANTAGE.md  UTILITIES.md  alpha_vantage_api.py  alpha_vantage_api_fallback.py  app.py  architecture_roadmap.md  backend_setup_files.py  check_api_access.py  compare_benchmarks.py  complete_symphony_example.py  complete_usage_guide.md  composer_compatibility.py  composer_dsl.txt  composer_symphony.py  data_pipeline.py  debug_backtest.py  debug_data_format.py  debug_database.py  debug_symphony.py  diagnostic_forecasts.py  eda1.ipynb  eda2.ipynb  enhanced_html_report.py  evaluation_functions.py  fetch_historical_data.py  fetch_stock_data.py  filter_base.py  filter_types.py  fix_forecast_table.py  fix_vix_data.py  fix_volume_nan.py  force_sector_update.py  historical_data_explr1.ipynb  integrated_symphony_system.py  intraday_data_manager.py  (+45 more)
backtest_results/: allocation_history.csv  backtest_results.csv  performance_analysis.json
composer/: results.md  symphony.cmpsr  symphony_analysis1.ipynb  symphony_creation_guide.cmpsr
data_cache/: AAPL_daily.csv  AMZN_daily.csv  GOOGL_daily.csv  IWM_daily.csv  META_daily.csv  MSFT_daily.csv  NVDA_daily.csv  PSQ_daily.csv  QQQ_daily.csv  SHY_daily.csv  SPY_daily.csv  TECL_daily.csv  TLT_daily.csv  TQQQ_daily.csv  TSLA_daily.csv  UVXY_daily.csv  XLE_daily.csv  XLF_daily.csv  XLK_daily.csv
diagnosis/: analyzer_results.json  symbol_forecast_results.json  symphony_forecast_results.json
docs/: Makefile  conf.py  function_specification_template.md  initial_refactoring_summary.md  refactoring_analysis_plan.md  regime_analyzer.rst
investing/: __init__.py
investing.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
logs/: api_calls_2025-04-05.json  api_calls_2025-04-08.json
results/: Copy_of_200d_MA_3x_Leverage.json  allocation_history.csv  backtest_results.csv  forecast_analysis.json  performance_analysis.json
symphony_analysis_results/: Momentum ETF Rotation_enhanced_report.html  Momentum ETF Rotation_report.html  sample_symphony_analysis.json
tests/: .gitignore  README.md  (+17 more)
(+64 files in other folders)
